infrastructure/controllers/base/cloudnativepg/networking/webhook-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-webhook-policy
  namespace: cnpg-system
spec:
  description: "Allow CloudNativePG webhook access"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  ingress:
    - fromEntities:
        - kube-apiserver
        - cluster
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
        - world
